changed main-hero__screen height and fixed height on mobile

--- a/SLMAGRO/css/style.css
+++ b/SLMAGRO/css/style.css
@@ -644,7 +644,9 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
 /* Main-hero */
 
 .main-hero {
+    padding-top: 65px;
     margin-bottom: 80px;
+    /* height: 800px; */
 }
 
 .main-hero__wrapper {
@@ -653,6 +655,7 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
     flex-direction: row;
     flex-wrap: wrap;
     overflow: hidden;
+    /* height: 100%; */
 }
 
 .main-hero__screen {
@@ -660,7 +663,8 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 800px;
+    height: calc(100vh - 65px);
+    min-height: 500px;
     overflow-y: auto;
     width: 50%;
     transition: all 0.3s ease-in;
@@ -694,15 +698,17 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
 
 
 .main-hero__item {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
     margin: 0 auto;
-    margin-top: 300px;
+    /* margin-top: 300px; */
     width: fit-content;
 }
 
 .main-hero__title {
-    /* margin-top: 200px; */
     font-size: 60px;
     font-weight: 700;
     color: #fff;
@@ -712,7 +718,7 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
 
 .main-hero__subtitle {
     margin-top: 20px;
-    font-size: 40px;
+    font-size: 36px;
     color: #fff;
     letter-spacing: 0.1em;
     text-transform: uppercase;
@@ -728,7 +734,7 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
 .main-hero__link {
     display: inline-block;
     margin-top: 30px;
-    padding: 8px 16px;
+    padding: 16px;
     border: 2px solid #fff;
     position: relative;
     font-size: 12px;
@@ -737,7 +743,10 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
     letter-spacing: 6px;
     text-transform: uppercase;
     transition: all 0.3s ease-in;
+    background: rgba(255, 255, 255, 0.1);
 }
+
+
 
 .main-hero__link:before {
     content: "\279E";
@@ -754,7 +763,6 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
 
 .main-hero__link:hover {
     padding-right: 26px;
-    background: rgba(0, 0, 0, 0.5);
 }
 
 .main-hero__link:hover.main-hero__link:before {
@@ -1465,6 +1473,7 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
 
     .main-hero__screen {
         width: 100%;
+        height: 500px;
     }
 
     .main-hero__title.main-title {
@@ -1563,7 +1572,7 @@ input[type="checkbox"]:checked~.hamburger-lines .line3 {
     }
 
     .main-hero__title.main-title {
-        font-size: 55px;
+        font-size: 53px;
     }
 
     .main-hero__subtitle {
